WEB-14: Fix problem with flickering

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -103,6 +103,7 @@ body {
   color: rgb(var(--text));
   transition: all 300ms ease-in-out;
   scroll-behavior: smooth;
+  background-color: rgb(var(--base));
 }
 
 a {
@@ -145,8 +146,7 @@ a:hover {
   height: 100lvh;
   overflow: hidden;
   transform: translate(-50%, -50%);
-  background-color: rgb(var(--base));
-  z-index: -1;
+  z-index: 0;
 
 
   .background-blob {
